Fixed Navbar overlap

--- a/css/styling.css
+++ b/css/styling.css
@@ -133,7 +133,7 @@ hr.small {
 }
 
 .navbar-brand {
-    width: 100%;
+    width: 50%;
     margin-right:10px;
 }
 
